--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.topicquests</groupId>
     <artifactId>tqos-asr-documizer</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.3.0-SNAPSHOT</version>
     <name>tqos-asr-documizer</name>
     <developers>
         <developer>
@@ -116,20 +116,6 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
  
             <plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
@@ -156,70 +142,29 @@
         </plugins>
     </build>
     <dependencies>
-	    <dependency> <!-- added -->
-		    <groupId>org.elasticsearch</groupId>
-		    <artifactId>elasticsearch</artifactId>
-		    <version>6.1.3</version>
-		</dependency>
-	 	<dependency>
-		    <groupId>org.mapdb</groupId>
-		    <artifactId>mapdb</artifactId>
-		    <version>3.0.4</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpclient</artifactId>
-		    <version>4.5.3</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
-		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpcore</artifactId>
-		    <version>4.4.6</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->
-		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpmime</artifactId>
-		    <version>4.5.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.opennlp/opennlp-tools -->
-		<dependency>
-		    <groupId>org.apache.opennlp</groupId>
-		    <artifactId>opennlp-tools</artifactId>
-		    <version>1.8.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.opennlp/opennlp-maxent -->
-		<dependency>
-		    <groupId>org.apache.opennlp</groupId>
-		    <artifactId>opennlp-maxent</artifactId>
-		    <version>3.0.3</version>
-		</dependency>
-   		<dependency>
-    		<groupId>org.topicquests</groupId>
-    		<artifactId>tqos-asr-core</artifactId>
-    		<version>0.9.0-SNAPSHOT</version>
-		</dependency>
-        <dependency>
-            <groupId>org.topicquests</groupId>
-            <artifactId>tqks-statistics</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
-        </dependency>
  
    		<dependency>
    			<groupId>org.topicquests</groupId>
    			<artifactId>tqos-general-database</artifactId>
-   			<version>0.1.3-SNAPSHOT</version>
+   			<version>0.2.0-SNAPSHOT</version>
    		</dependency>
+
 
    		<dependency>
    			<groupId>org.topicquests</groupId>
-   			<artifactId>tqks-subject-server</artifactId>
-   			<version>0.9.0-SNAPSHOT</version>
+   			<artifactId>tqos-asr-statistics-client</artifactId>
+   			<version>0.3.0-SNAPSHOT</version>
    		</dependency>
-
+   		<dependency>
+   			<groupId>org.topicquests</groupId>
+   			<artifactId>tqos-asr-api</artifactId>
+   			<version>0.1.0-SNAPSHOT</version>
+   		</dependency>
+   		<dependency>
+   			<groupId>org.topicquests</groupId>
+   			<artifactId>tqos-asr-common</artifactId>
+   			<version>0.4.0-SNAPSHOT</version>
+   		</dependency>
     </dependencies>
     <reporting>
         <plugins>
